# gtk1-compat

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  gdk-pixbuf-config  gdk-pixbuf-core.h  gdk-pixbuf-loader.h  glib.m4  gtk1-compat.pc.in  gtkfeatures.h  gtktoolbar.h  libglade-xgettext
include/: Makefile.am  glade-xml.h  gtk.h  gtkaccelgroup.h  gtkcompat.h  gtkenums.h  gtkmenu.h  gtkpaned.h
m4macros/: Makefile.am  gdk-pixbuf.m4  gtk_m4.patch  libglade.m4
scripts/: Makefile.am  gdk-pixbuf-config  glib-config  gtk-config  gtk1-compat-autofix  libglade-config
src/: Makefile.am  gtk1-compat.c  gtkaccelgroup.c  gtkmenu.c  gtktoolbar.c
