gtk1_compat_gdk_pixbufdir=$(includedir)/gtk1-compat/gdk-pixbuf
gtk1_compat_gdk_pixbuf_HEADERS = \
	gdk-pixbuf-core.h \
	gdk-pixbuf-loader.h

gtk1_compat_gladedir=$(includedir)/gtk1-compat/glade
gtk1_compat_glade_HEADERS = \
	glade-xml.h

gtk1_compat_gtkdir=$(includedir)/gtk1-compat/gtk
gtk1_compat_gtk_HEADERS = \
	gtkaccelgroup.h \
	gtkcompat.h \
	gtkenums.h \
	gtkfeatures.h \
	gtkmenu.h \
	gtkpaned.h \
	gtktoolbar.h \
	gtk.h
